--- a/RMGService/MonitoringApp/src/monitor/monitor.component.html
+++ b/RMGService/MonitoringApp/src/monitor/monitor.component.html
@@ -50,7 +50,7 @@
     </div>
   </div>
   
-  <div>
+  <div *ngIf="_monitorModel != undefined">
     <div class="row form-group">
       <div class="col-lg-6 col-md-12">
         <div class="Panel panel-primary"> 
@@ -60,7 +60,7 @@
             </div>
           </div> 
           <div class="panel-footer">
-            <app-chart></app-chart>                           
+            <app-chart [bucketCollection]="_monitorModel.aggregations.words.buckets"></app-chart>                           
               <div class="clearfix"></div>
           </div>
         </div>
