--- a/RMGService/MonitoringApp/src/monitor/monitor.component.html
+++ b/RMGService/MonitoringApp/src/monitor/monitor.component.html
@@ -1,40 +1,28 @@
 <div class="home jumbotron centered">
   <div class="container">   
    
-      <div class="row form-group">
+      <div class="row form-group" *ngIf="_monitorModel != undefined">
         <div class="col-xs-6">
            <label class="col-xs-3 control-label">Frequency :</label> 
-           <select class="selectpicker" type="string" [(ngModel)]="param" (ngModelChange)="changeInSelect()">
-            <option *ngFor="let master of masterData" value= {{master.name}}>
+           <select class="selectpicker"  type="string" [(ngModel)]="param" (ngModelChange)="changeInSelect()">
+            <option class="dropdown-item" *ngFor="let master of masterData" value= {{master.name}}>
               {{master.id}}
             </option>
         </select>         
-       </div>  
-    </div> 
-    
-    <div  *ngIf="_monitorModel != undefined">
-    <div class="row form-group">
+       </div> 
       <div class="col-xs-6">
-      <ul class="nav nav-pills" role="tablist" >
-        <li role="presentation" class="active"><a href="#">Total 
-          <span class="badge"> {{_monitorModel.hits.total}}</span>
-          </a></li>
-        <li role="presentation" class="active"><a href="#">UpperBound 
-          <span class="badge">{{_monitorModel.aggregations.words.doc_count_error_upper_bound}}</span>
-          </a></li>       
-      </ul>
-      </div> 
+        <span class="badge badge-success">Total : {{_monitorModel.hits.total}}</span>           
+        <span class="badge badge-warning"> UpperBound : {{_monitorModel.aggregations.words.doc_count_error_upper_bound}}</span>
+      </div>  
     </div> 
-    </div>
    
-  <div *ngIf="_monitorModel != undefined">
-     <div class="row form-group">
+  <div class="row form-group" *ngIf="_monitorModel != undefined">
       <div *ngFor="let bucket of _monitorModel.aggregations.words.buckets;">          
-          <div class="col-lg-3 col-md-6">
-            <div class="Panel panel-primary"> 
+          <div class="col-lg-2 col-md-2">
+            <div class="Panel panel-default panel-heading"> 
               <div class="panel-heading">
                 <div class="row">
-                  <div class="col-xs-3 text center"> {{ bucket.key }} </div>
+                  <div class="col-xs-1 text center"> {{ bucket.key | unKnownKey }} </div>
                 </div>
               </div> 
               <div class="panel-footer">
@@ -47,16 +35,14 @@
             </div>
           </div>
       </div>
-    </div>
-  </div>
-  
-  <div>
-    <div class="row form-group">
-      <div class="col-lg-6 col-md-12">
-        <div class="Panel panel-primary"> 
+    </div> 
+ 
+    <div class="row form-group" *ngIf="_monitorModel != undefined">
+      <div class="col-lg-6 col-md-6">
+        <div class="Panel panel-default panel-heading"> 
           <div class="panel-heading">
             <div class="row">
-              <div class="col-xs-6 text center"> Success Chart </div>
+              <div class="col-xs-3 text center"> Success Chart </div>
             </div>
           </div> 
           <div class="panel-footer">
@@ -65,11 +51,11 @@
           </div>
         </div>
       </div> 
-       <div class="col-lg-6 col-md-12">
-        <div class="Panel panel-primary"> 
+       <div class="col-lg-6 col-md-6">
+        <div class="Panel panel-default panel-heading"> 
           <div class="panel-heading">
             <div class="row">
-              <div class="col-xs-6 text center"> Failure Chart </div>
+              <div class="col-xs-3 text center"> Failure Chart </div>
             </div>
           </div> 
           <div class="panel-footer">
@@ -79,7 +65,6 @@
         </div>
       </div>     
     </div>   
-  </div>
-
- </div>
+  
+   </div>
 </div>
