Added multibarChart with realtime data

--- a/RMGService/MonitoringApp/src/monitor/monitor.component.html
+++ b/RMGService/MonitoringApp/src/monitor/monitor.component.html
@@ -17,8 +17,8 @@
               <div class="panel-footer">
                 <span>Total:{{ res.successCount }}</span> 
                  <div>
-                  <!-- <label class="label label-success"> success: {{ res.successCount }} </label>
-                   <label class="label label-danger">fail: {{ res.failedCount }}</label>-->
+                  <label class="label label-success"> success: {{ res.successCount }} </label>
+                   <label class="label label-danger">fail: {{ res.failedCount }}</label>
                  </div>                
                 <div class="clearfix"></div>
               </div>
