--- a/RMGService/MonitoringApp/src/login/login.component.html
+++ b/RMGService/MonitoringApp/src/login/login.component.html
@@ -1,3 +1,5 @@
+<div class=" jumbotron center">
+<div class="container">
 <div class="col-md-6 col-md-offset-3">   
     <h2>Login</h2>
     <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
@@ -17,4 +19,6 @@
         </div>
         <div *ngIf="error" class="alert alert-danger">{{error}}</div>
     </form>
+</div>
+</div>
 </div>
